Create style2.css to style with grid

--- a/newIndex.html
+++ b/newIndex.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 
-<body>
-    <header>
+<body class='body'>
+    <header id="header">
 
         <div id="battle">
             <h1>Rock - Paper - Scissors</h1>
