Styled stats div and started JS script for stats.

--- a/index3.html
+++ b/index3.html
@@ -41,8 +41,8 @@
                     <td id="computer">Computer</td>
                 </tr>
                 <tr id="scores">
-                    <td id="playerScore">0</td>
-                    <td id="compScore">0</td>
+                    <td id="playerScore"><p id="pScore">0</p></td>
+                  <td id="compScore"><p id="cScore">0</p></td>
                 </tr>
             </table>
         </div>
@@ -53,7 +53,7 @@
     </footer>
 
 
-    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
 </body>
 
 </html>
