--- a/index3.html
+++ b/index3.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="css/style3.css">
+    <meta name="viewport" content="initial-scale=1">
 </head>
 
 <body class='body'>
