Add pop-up box for winner. Task complete.

--- a/index3.html
+++ b/index3.html
@@ -47,10 +47,7 @@
                 </tr>
             </table>
         </div>
-        <div id="winner">
-            <span></span>
-            <p>Nobody wins!</p>
-        </div>
+        <span id="winner">HEY WHAT'S UP</span>
     </footer>
 
 
