Add title and viewport settings to <head>

--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
+    <title>ROCK|PAPER|SCISSORS</title>
     <link rel="stylesheet" href="css/style3.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class='body'>
