--- a/rock-paper-scissors/index3.html
+++ b/rock-paper-scissors/index3.html
@@ -2,10 +2,8 @@
 <html>
 
 <head>
-    <title>ROCK|PAPER|SCISSORS</title>
     <link rel="stylesheet" href="css/style3.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="initial-scale=1">
 </head>
 
 <body class='body'>
