--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <header>
 
@@ -10,23 +10,23 @@
         <div id='calculator'>
             <input type="text" id="display">
             <div id='buttons'>
-                <button class="op" id="div">/</button>
-                <button class="op" id="mul">*</button>
-                <button class="op" id="min">-</button>
-                <button class="op" id="plu">+</button>
-                <button class="op" id="dec">.</button>
-                <button class="op" id="ent">enter</button>
-                <button class="dig" id="b0">0</button>
-                <button class="dig" id="b1">1</button>
-                <button class="dig" id="b2">2</button>
-                <button class="dig" id="b3">3</button>
-                <button class="dig" id="b4">4</button>
-                <button class="dig" id="b5">5</button>
-                <button class="dig" id="b6">6</button>
-                <button class="dig" id="b7">7</button>
-                <button class="dig" id="b8">8</button>
-                <button class="dig" id="b9">9</button>
-                <button class="op" id="clr">clear</button>
+                <button class="op" id="clr"><span>clear</span></button>
+                <button class="op" id="div"><span>/</span></button>
+                <button class="op" id="mul"><span>*</span></button>
+                <button class="op" id="min"><span>-</span></button>
+                <button class="op" id="plu"><span>+</span></button>
+                <button class="op" id="dec"><span>.</span></button>
+                <button class="op" id="ent"><span>enter</span></button>
+                <button class="dig" id="b0"><span>0</span></button>
+                <button class="dig" id="b1"><span>1</span></button>
+                <button class="dig" id="b2"><span>2</span></button>
+                <button class="dig" id="b3"><span>3</span></button>
+                <button class="dig" id="b4"><span>4</span></button>
+                <button class="dig" id="b5"><span>5</span></button>
+                <button class="dig" id="b6"><span>6</span></button>
+                <button class="dig" id="b7"><span>7</span></button>
+                <button class="dig" id="b8"><span>8</span></button>
+                <button class="dig" id="b9"><span>9</span></button>
             </div>
         </div>
     </main>
